service-navigation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-navigation
  labels:
    app: service-navigation
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: service-navigation
