service-navigation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-navigation
  labels:
    app: service-navigation
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: higress
  tls:
  - hosts:
    - yindan.209173.xyz
    secretName: service-navigation-tls
  rules:
    - host: "yindan.209173.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-navigation
                port:
                  number: 80
